minor change on map rendering

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
           content="ie=edge">
     <meta name="viewport"
           content="width=device-width, initial-scale=1">
-    <title>Title</title>
+    <title>BOA</title>
   </head>
 
   <body>
