--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script>
       function addScript(src) {
         var s = document.createElement('script');
-        s.setAttribute('src', src + new Date().getTime());
+        s.setAttribute('src', src + '?c=' + new Date().getTime());
         document.body.appendChild(s);
       }
       addScript("dist/common.bundle.js")
